# fpga-guitar-processor

./: .gitignore  CLAUDE-INSTRUCTIONS.md  README.md
constraints/: nexys_a7_100t.xdc
docs/: analog_frontend_schematic.md
qt_app/: CMakeLists.txt  main.cpp
qt_app/resources/: style.qss
qt_app/src/: AudioDataModel.cpp  AudioDataModel.h  KnobWidget.cpp  KnobWidget.h  MainWindow.cpp  MainWindow.h  PedalBoard.cpp  PedalBoard.h  SerialManager.cpp  SerialManager.h  SimpleFFT.h  SpectrumWidget.cpp  SpectrumWidget.h  VuMeterWidget.cpp  VuMeterWidget.h  WaveformWidget.cpp  WaveformWidget.h
sim/: tb_delay.v  tb_distortion.v  tb_top.v
src/: top_guitar_processor.v
src/audio_input/: dc_blocking_filter.v  xadc_interface.v
src/audio_output/: dithering.v  sigma_delta_dac.v
src/dsp/: chorus.v  delay.v  distortion.v  effects_chain.v  lfo.v  noise_gate.v  overdrive.v  reverb.v  tremolo.v
src/filters/: biquad_filter.v  filter_coefficients.vh  fir_lowpass.v
src/uart/: uart_cmd_rx.v  uart_packet_tx.v  uart_rx.v  uart_tx.v
src/ui/: debouncer.v  parameter_controller.v  seven_seg_controller.v  vu_meter.v
src/utils/: fixed_point_math.vh  lfsr.v  sine_lut.v
